# scala-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh
engine/: Camera.cpp  Node.cpp  Window.cpp
engine/physics/: Physics.cpp  PhysicsObject.cpp
engine/physics/shapes/: PhysicsCube.cpp
engine/render/: Cube.cpp  Mesh.cpp  Shaders.cpp  Texture.cpp
public/engine/: Camera.h  Camera.hpp  Node.hpp  Scene.h  Scene.hpp  Window.h  Window.hpp
public/engine/physics/: Physics.hpp  PhysicsObject.hpp
public/engine/physics/shapes/: PhysicsCube.hpp
public/engine/render/: Cube.h  Cube.hpp  Mesh.h  Mesh.hpp  Shaders.hpp  Texture.h  Texture.hpp
public/utils/: Vector.hpp
shaders/: mesh.frag  mesh.vert
test-app/: CMakeLists.txt  app.cpp
